[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Boss/Rock.gd" type="Script" id=1]
[ext_resource path="res://asset/rock_break_spritesheet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 119.391, 156.783 )

[sub_resource type="Animation" id=2]

resource_name = "rock_break"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.333333 ) ]
}

[node name="Rock" type="Area2D" index="0"]

z_index = 20
z_as_relative = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Z Index" ]
ROCK_SPEED = 1500

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
hframes = 17
_sections_unfolded = [ "Animation", "Visibility" ]

[node name="collider" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -48.1067, -15.8326 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]

position = Vector2( -48.3071, -15.3095 )
scale = Vector2( 14.3869, 17.8937 )
rect = Rect2( -10, -10, 20, 20 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/rock_break = SubResource( 2 )
blend_times = [  ]

[connection signal="area_entered" from="." to="." method="_on_Rock_area_entered"]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


